Bug 155122 - background image is not shown after reboot
Summary: background image is not shown after reboot
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 155486 155522 155928 155959 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-05 01:06 UTC by Dorian Vasco
Modified: 2008-03-08 15:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dorian Vasco 2008-01-05 01:06:06 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

I have openSuSE 10.3 with the latest Packages from KDE4 installed.

When i reboot my PC, the Desktop background is just grey, I have to choose an image again to show it.
Comment 1 Alex Merry 2008-01-05 15:41:45 UTC
SVN commit 757616 by alexmerry:

Don't allow the rendering to be done before the token has been incremented.

Should fix the background not always being rendered, as well as the preview in the config dialog not always being updated.

BUG: 155122



 M  +3 -1      renderthread.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=757616
Comment 2 Alex Merry 2008-01-12 15:14:44 UTC
*** Bug 155486 has been marked as a duplicate of this bug. ***
Comment 3 Alex Merry 2008-01-12 16:42:27 UTC
*** Bug 155522 has been marked as a duplicate of this bug. ***
Comment 4 Raúl 2008-01-16 09:13:02 UTC
Could you please state when/in which version this fix will be available?.

Thanks.
Comment 5 Anne-Marie Mahfouf 2008-01-17 08:02:29 UTC
*** Bug 155959 has been marked as a duplicate of this bug. ***
Comment 6 Pino Toscano 2008-01-17 11:46:28 UTC
*** Bug 155928 has been marked as a duplicate of this bug. ***
Comment 7 Alex Merry 2008-01-18 17:57:44 UTC
This will be fixed in 4.0.1 and 4.1.
Comment 8 Iuri Fiedoruk 2008-03-08 15:26:04 UTC
I had no problems with kde 4.0.1 in kubuntu, just upgraded to 4.0.2 and it is happening. Very bad, bad bug, no donut for it ;)
Comment 9 Sebastian Sauer 2008-03-08 15:35:41 UTC
hehe, Iuri. Well, donuts arn't that good anyway. Pizza is better :)
Beside that, this seems to be a regression in 4.0.2 and bug #158784 deals with it.