Don't allow the rendering to be done before the token has been incremented.

Should fix the background not always being rendered, as well as the preview in the config dialog not always being updated.

BUG: 155122


svn path=/trunk/KDE/kdebase/workspace/; revision=757616